--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,7 +20,7 @@ h2 {
 }
 h3 {
   color: var(--secondary-color);
-  font-size: 18px;
+  font-size: 20px;
   text-align: start;
 }
 h4 {
@@ -43,12 +43,17 @@ section {
   padding: 0ex;
   background: var(--primary-color);
 }
+div.cv {
+  padding: 0px 120px;
+  margin: 0px;
+}
 .about {
   color: var(--main-color);
 }
 .about-me-wrapper {
   position: relative;
   margin: 10px 80px;
+  padding: 0px 10px;
   background: var(--primary-color);
 }
 .wrapper {
@@ -74,8 +79,11 @@ section {
   color: var(--main-color);
   background: var(--secondary-color);
 }
+img.packaging {
+  width: 60%;
+}
 
-@media (max-width: 700px) {
+@media (max-width: 600px) {
   h1 {
     font-size: 14px;
   }
@@ -88,12 +96,19 @@ section {
   p {
     font-size: 12px;
   }
-
+  .about-me-wrapper {
+    position: relative;
+    margin: 10px 10px;
+  }
   .wrapper {
     margin: 10px;
     padding: 30px;
   }
   .btn-customized {
     font-size: 10px;
+  }
+  div.cv {
+    padding: 0px;
+    margin: 0px;
   }
 }
