added all footer details

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -140,13 +140,16 @@ footer .contact-me {
     margin: 10px;
     padding: 30px;
   }
+ 
   .project-description {
     padding: 0px;
     margin: 0px;
   }
   .project-photos {
     margin: 0;
+    padding: 10px 0px;
   }
+
   .btn-customized {
     font-size: 10px;
   }
