--- a/styles/styles.css
+++ b/styles/styles.css
@@ -231,10 +231,12 @@ footer .contact-me {
     text-align: center;
     margin-bottom: 20px;
   }
- 
+
   footer img {
     display: inline;
     width: 50px;
   }
-
+  .phone-number {
+    font-size: 10px;
+  }
 }
