--- a/styles/styles.css
+++ b/styles/styles.css
@@ -236,7 +236,7 @@ footer .contact-me {
     display: inline;
     width: 50px;
   }
-  .phone-number {
+  .contact-me {
     font-size: 10px;
   }
 }
