--- a/styles/styles.css
+++ b/styles/styles.css
@@ -52,7 +52,8 @@ div.cv {
 }
 nav .last-update {
   font-size: 12px;
-  padding: 2px 0px 0px 450px;
+  padding: 2px 0px 0px 400px;
+  margin: 0;
 }
 .second-article {
   color: var(--main-color);
@@ -241,7 +242,6 @@ footer .contact-me {
   }
   nav .last-update {
     padding: 0px;
-    margin: 0px;
     text-align: left;
     font-size: 8;
   }
